--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,354 @@
 /**FOR ALL PAGES*/
 
-  @import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+details > summary::-webkit-details-marker {
+	display: none;
+  }
 
-
-.top{
-	text-align:center;
-	position:fixed;
-	z-index:1;
-	color:#000;
-	background-color:#FFF;
-	width:100%;
+  summary{
+	position:absolute;
+	right:0;
+	top:0;
+	padding:.75em;
+	cursor:pointer;
+	list-style: none;
 }
 
-*{
-	scroll-behavior:smooth;
-	min-width:15%;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+*,
+*::before,
+*::after{
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box; 
+
+}
+
+::root{
+    --clr-action: #8f7efb;
+
+    --clr-primary-100: #f1f1f1;
+    --clr-primary-90: #e1e1e1;
+    --clr-primary-80: #f1f1f1;
+    --clr-primary-70: #f1f1f1;
+    --clr-primary-60: #f1f1f1;
+    --clr-primary-50: #f1f1f1;
+    --clr-primary-0: #101010;
 }
 
 html, body{
-	font-family:Inter, Arial, sans-serif;
-	padding:0;
-	margin:0;
-	width:100%;
+    font-family:'Inter', Arial, Helvetica, sans-serif;
+
+	background-color: #f1f1f1;
 }
 
-.active{
-	text-decoration:underline;
-	text-underline-offset:7px;
-}
 
-nav{
-	z-index:1;
-	font-size:20px;
-	text-align:center;
-	color:#ededed;
-	background-color:#000;
-	padding:20px;
-}
 
 nav ul{
 	list-style-type:none;
 }
 
-nav li{
-	display:inline-block;
-	padding-right:20px;
+.nav-links-container{
+	display:block;
+	font-size:20px;
+	margin-left:-2px;
 }
 
-nav a{
-	text-decoration:none;
-	color:#ededed;
-}
-
-nav a:hover{
+.nav-links-container a:hover{
 	text-decoration:underline;
-	text-underline-offset:7px;
 }
 
+nav{
+	background-color: #000;
+	z-index: 10;
+	padding:1rem;
+	color:#FFF;
+
+	& > .logo-container{
+		display:flex;
+		flex-direction: row;
+
+		align-items: center;
+
+		padding:.25rem;
+
+	}
+
+	& ul{
+		list-style-type:none;
+		font-size:.75em;
+		display:inline-block;
+		margin-right:1em;
+	}
+
+	& summary{
+		color:#FFF;
+	
+		position: absolute;
+		right:1rem;
+		top:1rem;
+		padding:.5rem;
+
+		cursor: pointer;
+	
+		&::-webkit-details-marker{
+			display:none;
+		}
+	}
+}
+
+.nav-link{
+	display:inline-block;
+
+    text-decoration: none;
+
+	color: #f1f1f1;
+
+    &:hover, &:active{
+        text-decoration: underline;
+        text-underline-offset: .15rem;
+        text-decoration-thickness: .1rem;
+    }
+
+	&:focus-visible{
+		text-decoration:none;
+	}
+}
+
+.hidden-links{
+	margin-left:.4rem;
+
+}
+
+.logo-container{
+	display:flex;
+	flex-direction:row;
+	align-items:center;
+	padding:.25em;
+}
+
+nav{
+	box-shadow: 0px 0px 10px 0px #000;
+}
+
+/*---not updated yet---*/
+
+
+/*
+	.nav{
+    color:#e1e1e1;
+    background-color: #000000;
+
+    padding:.75rem;
+
+	text-align: left;
+	display: flex;
+	align-items: center;
+
+    list-style-type: none;
+}
+
+.nav-link{
+	display:inline-block;
+
+    text-decoration: none;
+
+	margin-right:1rem;
+
+	color: #f1f1f1;
+
+    &:hover, &:active{
+        text-decoration: underline;
+        text-underline-offset: .15rem;
+        text-decoration-thickness: .1rem;
+    }
+
+	&:focus-visible{
+		text-decoration:none;
+	}
+} 
+
+.cart{
+	font-size:1.25rem;
+	font-weight: 400;
+
+	position: absolute;
+	right:2.5rem;
+	top:0.5rem;
+
+	padding-block:.25rem;
+	padding-inline: .25rem;
+	border-radius:50%;
+
+	background-color: rgb(68, 68, 68, 0);
+
+	transition: linear .3s;
+
+	&:hover, &:focus, &:active{
+		background-color:#444;
+	}
+} */
+
+
+.hero{
+	width: 100%;
+	height: 100vh;
+
+	display:flex;
+	flex-direction: column;
+
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+
+	color:#ededed; 
+
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+
+	& > *{
+		margin-block: 1rem;
+	}
+}
+
+.hero1{
+	background-image:url('images/hero.png')
+}
+
+.hero2{
+	background-image:url('images/hero_products.png')
+}
+
+.hero3{
+	background-image:url('images/hero_blog.png')
+}
+
+.hero img{
+	height:200px;
+	width:auto;
+
+	aspect-ratio: 9 / 9;
+}
+
+.hero-header{
+	font-size:3em;
+}
+
+.hero-cta{
+	color:#f1f1f1;
+
+	border: 2px solid #f1f1f1;
+
+	padding:1rem;
+	border-radius:10px;
+
+	text-decoration: none;
+	display:block;
+
+	transition:linear .3s;
+
+	&:hover, &:focus, &:active{
+		background-color: #f1f1f1;
+		color:#101010;
+
+		mix-blend-mode: screen;
+	}
+}
+
+
+
+article, footer{
+	padding:2rem;
+}
+
+.section1:has(p) {
+	& > p{
+		margin-top:1rem;
+	}
+}
+
+
+
+.footer-container{
+	display:grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 30% 15%;
+	gap:7rem;
+
+	place-content: center;
+
+	& > div > h4{
+		margin-bottom:.5rem;
+		font-size:1.25rem;
+	}
+}
+
+.footer-link, address, img, .email{
+	font-size:1rem;
+	display:inline-block;
+    text-decoration: none;
+
+	margin-inline:0.15rem;
+
+	color:#101010;
+
+    &:hover, &:active{
+        text-decoration: underline;
+        text-underline-offset: .15rem;
+        text-decoration-thickness: .05rem;
+    }
+
+	&:focus-visible{
+		text-decoration:none;
+	}
+
+	&.email{
+		margin:0;
+		word-break: break-all;
+	}
+}
+
+.navigation, .navigation a, .legal{
+	font-size:1rem;
+	text-align: center;
+	margin-block:.25rem;
+
+	&.navigation{
+		margin-top:5rem;
+	}
+}
+
+
+@media only screen and (max-width:600px){
+	.footer-container{
+		margin:0;
+		padding:0;
+		display:inline-grid;
+		width:100%;
+		grid-template-columns: 100%;
+		grid-template-rows: 1fr 1fr;
+
+		margin-bottom:-5rem;
+	}
+}
+
+.active{
+	text-decoration: underline;
+	text-decoration-thickness: .2rem;
+	text-underline-offset: .2rem;
+
+	&:hover{
+		text-decoration-thickness: .2rem;
+		text-underline-offset: .2rem;
+	}
+}
+
+
+/*-------------------have not updated----------------------*/
+/*
 main{
 	padding-top:100px;
 	font-size:20px;
@@ -185,4 +477,4 @@ footer{
 	text-align:left;
 	padding-top:-30px !important;
 }
-
+*/
