--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ nav{
 } */
 
 
-.hero{
+.hero::after{
 	width: 100%;
 	height: 100vh;
 
@@ -214,15 +214,15 @@ nav{
 	}
 }
 
-.hero1{
+.hero1::after{
 	background-image:url('images/hero.png')
 }
 
-.hero2{
+.hero2::after{
 	background-image:url('images/hero_products.png')
 }
 
-.hero3{
+.hero3::after{
 	background-image:url('images/hero_blog.png')
 }
 
