--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,7 @@ nav{
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 
 	& > *{
 		margin-block: 1rem;
