--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ nav{
 } */
 
 
-.hero::after{
+.hero{
 	width: 100%;
 	height: 100vh;
 
@@ -215,15 +215,15 @@ nav{
 	}
 }
 
-.hero1::after{
+.hero1{
 	background-image:url('images/hero.png')
 }
 
-.hero2::after{
+.hero2{
 	background-image:url('images/hero_products.png')
 }
 
-.hero3::after{
+.hero3{
 	background-image:url('images/hero_blog.png')
 }
 
