--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ nav{
 } */
 
 
-.hero{
+/* .hero{
 	width: 100%;
 	height: 100vh;
 
@@ -225,6 +225,21 @@ nav{
 
 .hero3{
 	background-image:url('images/hero_blog.png')
+} */
+
+body:after{
+	content:"";
+	position:fixed; /* stretch a fixed position to the whole screen */
+	top:0;
+	height:100vh; /* fix for mobile browser address bar appearing disappearing */
+	left:0;
+	right:0;
+	z-index:-1; /* needed to keep in the background */
+	background: url('images/hero.png') center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 .hero img{
