--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ nav{
 
 	color:#ededed; 
 
-	background-size: cover;
+	background-size: 100% 100%;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
