--- a/blog.css
+++ b/blog.css
@@ -12,6 +12,8 @@
     background-color: var(--background);
     background-color: #efefeef1;
 
+    position:relative;
+
     padding:1rem;
     margin-block:1rem;
 
@@ -21,6 +23,49 @@
     color:#080707;
 
     width:300px;
+    height:400px;
+}
+
+.cta{
+    position:absolute;
+    bottom:1rem;
+}
+
+@media only screen and (min-width:300px){
+    .blog-container{
+        display:grid;
+        grid-auto-flow: row;
+
+        
+    }
+
+    .wrapper{
+        display:grid;
+        grid-auto-flow: row;
+
+        place-content: center;
+        place-items: center;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media only screen and (min-width:750px){
+    .blog-container{
+        display:grid;
+        grid-auto-flow: row;
+        grid-template-columns: 1fr 1fr;
+        gap:1rem; 
+    }
+}
+
+@media only screen and (min-width:1000px){
+    .blog-container{
+        display:grid;
+        grid-auto-flow: row;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap:1rem; 
+    }
 }
 
 h3{
@@ -70,4 +115,6 @@ h3{
         background-color: #0d0d0d;
     }
 }
+
+
 
