--- a/blog.css
+++ b/blog.css
@@ -22,8 +22,12 @@
     color:var(--text);
     color:#080707;
 
-    width:300px;
-    height:400px;
+    width:18.75rem;
+    height:25rem;
+}
+
+#header0, #header2{
+    margin-bottom:2rem;
 }
 
 .cta{
@@ -35,8 +39,6 @@
     .blog-container{
         display:grid;
         grid-auto-flow: row;
-
-        
     }
 
     .wrapper{
@@ -48,6 +50,10 @@
         align-items: center;
         justify-content: center;
     }
+
+    #header0, #header2{
+        margin-bottom:1rem;
+    }
 }
 
 @media only screen and (min-width:750px){
@@ -56,6 +62,12 @@
         grid-auto-flow: row;
         grid-template-columns: 1fr 1fr;
         gap:1rem; 
+    }
+}
+
+@media only screen and (min-width:900px){
+    #header2{
+        margin-bottom:2.5rem;
     }
 }
 
@@ -80,7 +92,7 @@ h3{
     color:#080707e9;
 }
 
-.tags{
+.blog-tags{
     font-size:.75rem;
     margin-block:0.75rem 0;
     background-color: var(--accent);
@@ -114,6 +126,18 @@ h3{
         background-color: var(--accent);
         background-color: #0d0d0d;
     }
+}
+
+.header{
+    text-wrap: balance;
+}
+
+.content{
+    white-space: pre-wrap;
+}
+
+.article-header{
+    font-size:2rem;
 }
 
 
