--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ noscript{
 
 	color:#ededed; 
 
-	background-size: 100% 100vh;
+	background-size: auto;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
