--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ noscript{
 
 	color:#ededed; 
 
-	background-size: auto;
+	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
