--- a/blog.css
+++ b/blog.css
@@ -2,7 +2,7 @@
 :root{
 --text: #0d0d0d;
 --subtitle: #0d0d0d;
---background: #f2f2f2;
+--background: #ebebebb1;
 --primary-button: #404040;
 --secondary-button: #ffffff;
 --accent: #0d0d0d;
@@ -10,7 +10,7 @@
 
 .blog-post{
     background-color: var(--background);
-    background-color: #efefeef1;
+    background-color: #ebebebb1;
 
     position:relative;
 
@@ -138,6 +138,10 @@ h3{
 
 .article-header{
     font-size:2rem;
+}
+
+.blog-header:not(.long){
+    margin-block:0 2.5rem;
 }
 
 
