--- a/shop.css
+++ b/shop.css
@@ -2,7 +2,7 @@
 :root{
     --text: #0d0d0d;
     --subtitle: #0d0d0d;
-    --background: #f2f2f2;
+    --background: #e8e8e8;
     --primary-button: #404040;
     --secondary-button: #ffffff;
     --accent: #0d0d0d;
@@ -10,7 +10,7 @@
     
     .shop-item{
         background-color: var(--background);
-        background-color: #efefeef1;
+        background-color: #e8e8e8;
     
         position:relative;
     
