--- a/css/blog.css
+++ b/css/blog.css
@@ -92,7 +92,8 @@ h3{
     color:#080707e9;
 }
 
-.blog-tags{
+.blog-tags span{
+    margin-inline:0 1rem;
     font-size:.75rem;
     margin-block:0.75rem 0;
     background-color: var(--accent);
@@ -107,7 +108,7 @@ h3{
     font-size:.75rem;
     margin-block:0.75rem 0;
     background-color: var(--primary-button);
-    background-color: #404040;
+    background-color: #0d0d0d;
     color: #f1f1f1;
     display:inline-block;
     padding:.4rem 1.2rem;
@@ -124,7 +125,7 @@ h3{
 
     &:hover{
         background-color: var(--accent);
-        background-color: #0d0d0d;
+        background-color: #404040;
     }
 }
 
@@ -142,6 +143,10 @@ h3{
 
 .blog-header:not(.long){
     margin-block:0 2.5rem;
+}
+
+noscript{
+    margin-block:1rem;
 }
 
 
