--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@
     margin: 0; 
     padding: 0; 
     box-sizing: border-box; 
-
 }
 
 ::root{
@@ -18,7 +17,7 @@
 
     --clr-primary-100: #FDFCFC;
     --clr-primary-90: #e1e1e1;
-    --clr-primary-80: #f1f1f1;
+    --clr-primary-80: #d9d9d9;
     --clr-primary-70: #f1f1f1;
     --clr-primary-60: #f1f1f1;
     --clr-primary-50: #f1f1f1;
@@ -81,21 +80,41 @@ nav{
 		font-size:.75em;
 		display:inline-block;
 		margin-right:1em;
+
+		position: absolute;
+		background-color: #0D0D0D;
+		padding-left:3rem;
+		margin-left:-2rem;
+		display: block;
+		width:105%;
+		padding-block: 0.5rem 1rem;
+
+		& li > a{
+			font-size:1rem;
+			display:block;
+			width:100%;
+			cursor:pointer;
+			&:hover{
+				text-decoration: underline;
+			}
+		}
 	}
 
 	& summary{
 		color:#FFF;
 	
 		position: absolute;
-		right:1rem;
-		top:1rem;
+		right:.5rem;
+		top:.5rem;
 		padding:.5rem;
+		font-size: 2rem;;
 
 		cursor: pointer;
 	
 		&::-webkit-details-marker{
 			display:none;
 		}
+
 	}
 }
 
@@ -126,6 +145,7 @@ details > summary::-webkit-details-marker {
 	right:0;
 	top:0;
 	padding:.75em;
+	font-size:1rem;
 	cursor:pointer;
 	list-style: none;
 }
@@ -140,6 +160,7 @@ details > summary::-webkit-details-marker {
 	flex-direction:row;
 	align-items:center;
 	padding:.25em;
+	margin-inline:1rem;
 }
 
 noscript{
@@ -183,14 +204,6 @@ article, footer{
 	
 }
 
-.shop-item:hover{
-	box-shadow:0px  0px 5px 0px #7e7e7e41;
-}
-
-@media screen and (max-width:715px){
-
-}
-
 .footer-link, address, img, .email{
 	font-size:1rem;
 	display:inline-block;
@@ -218,10 +231,6 @@ article, footer{
 .follow img{
 	width:1.5rem;
 	height:1.5rem;
-
-	& p{
-
-	}
 }
 
 .navigation, .navigation a, .legal{
@@ -234,8 +243,7 @@ article, footer{
 	}
 }
 
-
-@media only screen and (max-width:600px){
+@media only screen and (max-width:649px){
 	.footer-container{
 		margin:0;
 		padding:0;
@@ -247,17 +255,6 @@ article, footer{
 		margin-bottom:-5rem;
 		
 		gap:2rem;
-	}
-}
-
-.active{
-	text-decoration: underline;
-	text-decoration-thickness: .1rem;
-	text-underline-offset: .1rem;
-
-	&:hover{
-		text-decoration-thickness: .1rem;
-		text-underline-offset: .1rem;
 	}
 }
 
@@ -299,136 +296,3 @@ article, footer{
 		background-color: #282323d9;
 	}
 }
-
-
-/*-------------------have not updated----------------------*/
-/*
-main{
-	padding-top:100px;
-	font-size:20px;
-	text-align:center;
-	padding-bottom:20px;
-}
-
-em{
-	font-size:18px;
-}
-
-main a{
-	text-decoration:underline;
-	color:#333;
-}
-
-main a:hover{
-	text-decoration:none;
-}
-
-@media only screen and (max-width:768px){
-	nav li{
-		padding-bottom:10px;
-	}
-}
-	
-article{
-	width:80%;
-	margin-left:10%;
-	margin-right:10%;
-	text-align:center;
-}
-
-.findus{
-	text-align:left;
-	padding-left:5%;
-}
-
-.findus a{
-	text-decoration:none;
-}
-
-.findus address{
-	margin-top:-15px;
-}
-
-.findus a, address{
-	font-size:18px;
-}
-
-.socials a{
-	padding:7px;
-	border:1px solid #333;
-	border-radius:30px;
-	transition:.3s ease;
-}
-
-.socials a:hover{
-	padding:7px;
-	border:2px solid #333;
-	color:#FFF;
-	background-color:#333;
-	border-radius:30px;
-}
-
-.socials{
-	width:100%;
-}
-
-.bottom-nav{
-	font-size:14px;
-	margin-bottom:20px;
-}
-
-.bottom-nav a{
-	text-decoration:none;
-}
-
-.bottom-nav a:hover{
-	text-decoration:underline;
-}
-
-.copy{
-	font-size:12px;
-}
-
-a{
-	overflow:none;
-	white-space:nowrap;
-}
-
-body{
-	width:100%;
-}
-
-footer{
-	width:100%;
-}
-
-@media only screen and (max-width:1000px){
-	.hero-inner h1{
-		font-size:20px;
-	}
-}
-
-.entry{
-	background-color:#ededed;
-	padding:10px;
-	margin-bottom:20px;
-	text-align:left;
-}
-
-.post-header{
-	text-align:left;
-	margin-bottom:-20px;
-	margin-top:-10px;
-}
-
-.post-content{
-	text-align:left;
-	padding-bottom:20px;
-}
-
-.entry a{
-	text-decoration:none;
-	text-align:left;
-	padding-top:-30px !important;
-}
-*/
