--- a/css/shop.css
+++ b/css/shop.css
@@ -1,4 +1,3 @@
-
 :root{
     --text: #0d0d0d;
     --subtitle: #0d0d0d;
@@ -8,126 +7,104 @@
     --accent: #0d0d0d;
     }
     
-    .shop-item{
-        background-color: var(--background);
-        background-color: #e8e8e8;
-    
-        position:relative;
-    
-        padding:1rem;
-        margin-block:1rem -1rem;
 
-    
-        border-radius:.3rem;
-    
-        color:var(--text);
-        color:#080707;
-    
-        width:18.75rem;
-        height:26rem;
+article{
+    text-align: center;
+}
+
+.shop-item{
+    text-align: left;
+
+    background-color: var(--background);
+    background-color: #ebebebb1;
+
+    display:grid;
+
+    position:relative;
+
+    padding:1rem;
+    margin-block:1rem;
+
+    border-radius:.3rem;
+
+    color:var(--text);
+    color:#080707;
+
+    width:18.75rem;
+    height:25rem;
+}
+
+.shop-item img{
+    width:16.75rem;
+    height: 17.75rem;
+    aspect-ratio: 9 / 9;
+    object-fit: cover;
+
+    display:block;
+    border-radius:3px;
+    margin-inline:auto;
+
+    border-radius: 3px;
+}
+
+.item-tags span{
+    margin-inline:0 1rem;
+    font-size:.75rem;
+    background-color: var(--accent);
+    background-color: #0d0d0d;
+    color: #f1f1f1;
+    display:inline-block;
+    padding:.4rem 1rem;
+    border-radius:2rem;
+}
+
+#header0, #header2{
+    margin-bottom:2rem;
+}
+
+
+@media only screen and (min-width:300px){
+    .shop-container{
+        display:grid;
+        grid-auto-flow: row;
     }
-    
+
+    .wrapper{
+        display:grid;
+        grid-auto-flow: row;
+
+        align-items: center;
+        justify-content: center;
+    }
+
     #header0, #header2{
-        margin-bottom:2rem;
+        margin-bottom:1rem;
     }
-    
-    .cta{
-        position:absolute;
-        bottom:1rem;
-    }
-    
-    @media only screen and (min-width:300px){
-        .shop-container{
-            display:grid;
-            grid-auto-flow: row;
-        }
-    
-        .wrapper{
-            display:grid;
-            grid-auto-flow: row;
-    
-            place-content: center;
-            place-items: center;
-            align-items: center;
-            justify-content: center;
-        }
-    
-        #header0, #header2{
-            margin-bottom:1rem;
-        }
-    }
-    
-    @media only screen and (min-width:750px){
-        .shop-container{
-            display:grid;
-            grid-auto-flow: row;
-            grid-template-columns: 1fr 1fr;
-            gap:1rem; 
-        }
-    }
-    
-    @media only screen and (min-width:1000px){
-        .shop-container{
-            display:grid;
-            grid-auto-flow: row;
-            grid-template-columns: 1fr 1fr 1fr;
-            gap:1rem; 
-        }
-    }
-    
-    h3{
-        font-size:1.4rem;
-        margin-block:.75rem .75rem;
-    }
+}
 
-    .shop-tags{
-        font-size:.75rem;
-        margin-block:0rem 0.75rem;
-        background-color: var(--accent);
-        background-color: #0d0d0d;
-        color: #f1f1f1;
-        display:inline-block;
-        padding:.4rem 1rem;
-        border-radius:2rem;
+@media only screen and (min-width:750px){
+    .shop-container{
+        display:grid;
+        grid-auto-flow: row;
+        grid-template-columns: 1fr 1fr;
+        gap:1rem; 
     }
-    
-    .cta{
-        font-size:.75rem;
-        margin-block:0.75rem 0;
-        background-color: var(--primary-button);
-        background-color: #404040;
-        color: #f1f1f1;
-        display:inline-block;
-        padding:.4rem 1.2rem;
-        border-radius:.25rem;
-    
-        transition: linear .3s;
-    
-        cursor: pointer;
-    
-        & > a{
-            color: #FFF;
-            text-decoration:none;
-        }
-    
-        &:hover{
-            background-color: var(--accent);
-            background-color: #0d0d0d;
-        }
-    }
-    /*shop item image*/
-    .shop-item-image{
-        width:250px;
-        aspect-ratio: 16 / 9;
-        object-fit: cover;
+}
 
-        border-radius:4px;
+@media only screen and (min-width:1000px){
+    .shop-container{
+        display:grid;
+        grid-auto-flow: row;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap:.5rem 1.5rem; 
     }
+}
 
-    .article-header{
-        font-size:2rem;
-    }
+h3{
+    font-size:1.4rem;
+    margin-block:.75rem .75rem;
+}
 
-    .content{
-        text-wrap:balance;
-    }
+.article-header{
+    font-size:2rem;
+}
