--- a/css/styles.css
+++ b/css/styles.css
@@ -37,14 +37,17 @@ html, body{
 
 	color: #080707;
 	background-color: #d9d9d9;
+
+	z-index: 1;
+
+	overflow-x:hidden;
+	width:100%;
 }
 
 
 
 nav ul{
 	list-style-type:none;
-
-	
 }
 
 .nav-links-container{
@@ -59,7 +62,7 @@ nav ul{
 
 nav{
 	background-color: #0D0D0D;
-	z-index: 10;
+	z-index: 100;
 	padding:1rem;
 	color:#FFF;
 
@@ -169,6 +172,11 @@ article, footer{
 	& > p{
 		margin-top:1rem;
 	}
+}
+
+h2{
+    font-size:2rem;
+    margin-block:1rem;
 }
 
 
