--- a/css/about.css
+++ b/css/about.css
@@ -24,8 +24,29 @@ h3{
     text-align: center;
 }
 
+figcaption{
+    position: absolute;
+
+    font-size:.6rem;
+    background-color: var(--accent);
+    background-color: #0d0d0d;
+    color: #f1f1f1;
+    display:inline-block;
+    padding:.4rem 1rem;
+    border-radius:2rem;
+
+    bottom:1rem;
+    left:1rem;
+}
+
+.blog-image{
+    position: relative;
+}
+
 .about-container, .story-container{
     width:65%;
+
+    position: relative;
 
     margin-inline:auto;
     text-align: left;
@@ -35,4 +56,13 @@ h3{
     border-radius:.3rem;
 
     margin-block:2rem;
+
+    & img{
+        width:100%;
+        margin-inline:auto;
+        height:25rem;
+        border-radius: .3rem;
+
+        object-fit: cover;
+    }
 }
