--- a/css/about.css
+++ b/css/about.css
@@ -58,11 +58,21 @@ figcaption{
     margin-block:2rem;
 
     & img{
-        width:100%;
         margin-inline:auto;
+        width:100%;
         height:25rem;
         border-radius: .3rem;
 
         object-fit: cover;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .about-container, .story-container{
+        width:80%;
+    }
+
+    figcaption{
+        margin-inline:auto;
     }
 }
