--- a/css/contact.css
+++ b/css/contact.css
@@ -23,11 +23,14 @@
 }
 
 .wrapper{
-    width:65%;
     margin-inline:auto;
+
+    & h2{
+        text-wrap:balance;
+    }
 }
 
-.email-section, .socials-section{
+.email-section{
     position: relative;
 
     margin-inline:auto;
@@ -38,4 +41,15 @@
     border-radius:.3rem;
 
     margin-block:2rem;
+}
+
+@media only screen and (min-width:1001px){
+    .wrapper{
+        width:65%;
+    }
+}
+
+.hidden-links{
+    opacity:1;
+    mix-blend-mode: normal;
 }
