--- a/css/index.css
+++ b/css/index.css
@@ -319,21 +319,48 @@ h2{
     text-wrap:balance;
 }
 
-@media only screen and (max-width:700px){
-    .socials-container{
-        width:90%;
-    }
+.wrapper{
+    margin-inline:auto;
 
-}
-
-@media only screen and (max-width:1000px){
-    .socials-container{
-        width:80%;
+    & h2{
+        text-wrap:balance;
     }
 }
 
-.socials-container > .follow{
-    margin-block:3rem !important;
+.socials-wrapper{
+    margin-inline:auto;
+
+    & h2{
+        text-wrap:balance;
+    }
+}
+
+.socials-section{
+    position: relative;
+
+    margin-inline:auto;
+    text-align: left;
+
+    background-color: #ebebebb1;
+    padding:1rem 2rem;
+    border-radius:.3rem;
+
+    margin-block:2rem;
+}
+
+p{
+    margin-block:1rem .5rem;
+}
+
+@media only screen and (min-width:1001px){
+    .socials-wrapper{
+        width:65%;
+    }
+}
+
+.hidden-links{
+    opacity:1;
+    mix-blend-mode: normal;
 }
 
 
