--- a/css/about.css
+++ b/css/about.css
@@ -7,18 +7,6 @@
     --accent: #0d0d0d;
 }
 
-h2{
-    margin-block:2rem;
-
-}
-
-p, h3{
-    margin-block:1rem;
-}
-
-h3{
-   font-size:1.5rem;
-}
 
 .wrapper{
     text-align: center;
@@ -39,7 +27,7 @@ figcaption{
     left:1rem;
 }
 
-.blog-image{
+.about-image{
     position: relative;
 }
 
