--- a/css/index.css
+++ b/css/index.css
@@ -18,67 +18,132 @@
 	--accent: #0d0d0d;
 }
 
+nav{
+    z-index: 10;
+}
+
 .hero{
-	width: 100%;
-	height: 100vh;
+    width: 100%;
+    height:100vh;
 
-	display:flex;
-	flex-direction: column;
+    background: linear-gradient(#0D0D0D, #10111e);
+    margin-top:-1rem;
+    color: #e1e1e1;
 
-	justify-content: center;
-	align-items: center;
-	text-align: center;
+    min-width:90%;
 
-	color:#ededed; 
+    display:grid;
+    grid-template-columns: 1fr 1fr;
 
-    background-image: url(../images/hero.png);
-    background-size: cover;
-    background-position: center;
+    justify-content: center;
+    align-items: center;
+    
+    & > div{
+        padding-inline: 2rem;
+    }
 
-	& > *{
-		margin-block: 1rem;
-	}
+    & h1{
+        font-size:2.5rem;
+        text-wrap:balance;
+
+        max-width: 25ch;
+    }
 
     & p{
-        padding-inline:2rem;
-        text-wrap:balance;
+        margin-block:.5rem 1.5rem;
+        max-width: 45ch;
     }
 
-    & img{
-        height:200px;
-	    width:auto;
+    & a{
+        border:2px solid #e1e1e1;
 
-	    aspect-ratio: 9 / 9;
+        &:hover{
+            background-color: #e1e1e1;
+            color:#0D0D0D;
+        }
     }
 
-    & .hero-header{
-        font-size:3em;
+    & .hero-img{
+        height: 35rem;
+        width:  35rem;
+        object-fit: cover;
+        border-radius: 15% 50%;
     }
-    
-    & .hero-cta{
-        color:#f1f1f1;
-    
-        border: 2px solid #f1f1f1;
-    
-        padding:1rem;
-        border-radius:10px;
-    
-        text-decoration: none;
-        display:block;
-    
-        transition:linear .3s;
-    
-        &:hover, &:focus, &:active{
-            background-color: #f1f1f1;
-            color:#080707;
-    
-            mix-blend-mode: screen;
+}
+
+
+@media only screen and (max-width:1000px){
+    .hero{
+        grid-template-columns: 1fr;
+        grid-auto-rows: 1fr 1fr;
+
+        text-align: center;
+        margin-inline:auto;
+
+        & p, h1{
+            display:block;
+            margin-inline:auto;
+        }
+
+        & .hero-img{
+            width: 30rem;
+            height:30rem;
         }
     }
 }
 
-.hero1{
-	background-image:url('../images/hero.png')
+@media only screen and (max-width:500px){
+    .hero{
+        grid-template-columns: 1fr;
+        grid-auto-rows: 1fr 1fr;
+
+        text-align: center;
+        margin-inline:auto;
+
+        & p, h1{
+            display:block;
+            margin-inline:auto;
+            max-width:92%;
+        }
+
+        & p{
+            max-width:80%;
+        }
+
+        & .hero-img{
+            width: 25rem;
+            height:25rem;
+        }
+    }
+}
+
+@media only screen and (max-width:400px){
+    .hero{
+        grid-template-columns: 1fr;
+        grid-auto-rows: 1fr 1fr;
+
+        text-align: center;
+        margin-inline:auto;
+
+        & p, h1{
+            display:block;
+            margin-inline:auto;
+            max-width:92%;
+        }
+
+        & p{
+            max-width:80%;
+        }
+
+        & .hero-img{
+            width: 22.5rem;
+            height:22.5rem;
+        }
+    }
+}
+
+.purple-emph{
+    color:#a587f1;
 }
 
 
