--- a/css/index.css
+++ b/css/index.css
@@ -50,7 +50,7 @@ nav{
     }
 
     & p{
-        margin-block:.5rem 1.5rem;
+        margin-block:1rem 0.5rem;
         max-width: 45ch;
     }
 
@@ -68,6 +68,7 @@ nav{
         width:  35rem;
         object-fit: cover;
         border-radius: 15% 50%;
+        outline:2px #10111e;
     }
 }
 
