--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
 
 
 	--text: #080707;
-	--background: #fdfcfc;
+	--background: #dedede;
 	--primary-button: #353331;
 	--secondary-button: #f5f5f4;
 	--accent: #0d0d0d;
@@ -36,7 +36,7 @@ html, body{
     font-family:'Inter', Arial, Helvetica, sans-serif;
 
 	color: #080707;
-	background-color: #d9d9d9;
+	background-color: #fff;
 
 	z-index: 1;
 
