--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ img{
     --clr-60: rgba(217, 217, 217, 0.357);
     --clr-75: #ececec;
     --clr-100: #ececf6;
-    --clr-accent: #595999;
+    --clr-accent: #6464a2;
 
     --ff-sans-serif: 'Roboto', 'Helevtica', sans-serif;
 
@@ -126,6 +126,7 @@ nav{
         cursor: pointer;
 
         background:0;
+        color: var(--clr-0);
 
         transition: .15s linear;
 
@@ -168,7 +169,7 @@ nav{
 header{
     margin-block:1rem;
 
-    height:90vh;
+    height:100%;
     height:90dvh;
     width:100%;
 
