--- a/styles.css
+++ b/styles.css
@@ -167,9 +167,9 @@ nav{
 }
 
 header{
-    margin-block:1rem;
+    margin-block:0 1rem;
 
-    height:90dvh;
+    height:80dvh;
     width:100%;
 
     margin-inline:auto;
