--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,8 @@ nav{
 header{
     margin-block:0 1rem;
 
-    height:80dvh;
+    height:90vh;
+    height:90dvh;
     width:100%;
 
     margin-inline:auto;
